--- a/themes/mt32/static/css/footer.css
+++ b/themes/mt32/static/css/footer.css
@@ -1,8 +1,19 @@
 .footer {
+    display: flex;
     background-color: white;
     margin-top: 3em;
-    min-height: 100px;
+    min-height: 7em;
     border-radius: 15px 15px 0 0;
     padding: 2em;
     color: black;
+}
+
+.fullsize {
+    width: 100%;
+}
+
+.flow-up {
+    display: flex;
+    flex-direction: column-reverse;
+    padding: 0.5em;
 }
