--- a/themes/mt32/static/css/index.css
+++ b/themes/mt32/static/css/index.css
@@ -8,7 +8,17 @@ body {
 
 .box {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
+    gap: 1em 1em;
+
+    background-color: white;
+    border-radius: 15px;
+    padding: 0.6em;
+}
+
+.box2 {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
     gap: 1em 1em;
 
     background-color: white;
@@ -25,7 +35,7 @@ body {
 .span {
     grid-column: span 2;
 }
-
+ 
 .span-wide {
     grid-column: span 3;
 }
