--- a/themes/mt32/layouts/_default/single.html
+++ b/themes/mt32/layouts/_default/single.html
@@ -3,7 +3,7 @@
     {{- partial "head.html" . -}}
     <body>
         {{- partial "header.html" . -}}
-        <div class="box2">
+        <div class="box">
             <div class="postlink orange">
                 <h1>{{ .Title }}</h1>
                 <hr>
