--- a/themes/mt32/layouts/partials/footer.html
+++ b/themes/mt32/layouts/partials/footer.html
@@ -1,11 +1,11 @@
 <footer class="footer">
-    <div class="fullsize">
+    <div class="fullsize txtDark">
         <a class="txtDark" href="{{ .Params.github }}">GitHub</a><br/>
         <a class="txtDark" href="{{ .Params.facebook }}">Facebook</a><br/>
         <a class="txtDark" href="{{ .Params.twitter }}">Twitter</a><br/>
         <a class="txtDark" href="{{ .Params.reddit }}">Reddit</a><br/>
         <br/>
-        <a>theme by <a class="txtDark" href="https://github.com/mtorials">m'torials</a></a>
+        <a class="txtDark">theme by <a class="txtDark" href="https://github.com/mtorials">m'torials</a></a>
     </div>
     <div class="flow-up">
         <div class="txtDark">{{ .Site.Params.disclamer }}</div>
