--- a/themes/mt32/layouts/_default/list.html
+++ b/themes/mt32/layouts/_default/list.html
@@ -13,7 +13,7 @@
                 <a class="small">by {{ .Params.author }}, {{ .Date }}</a><br>
                 <hr>
                 <p>
-                    {{ .Params.descrpition }}
+                    {{ .Params.description }}
                 </p>
                 <hr>
                 {{ range .Params.tags }}
