--- a/themes/mt32/static/css/index.css
+++ b/themes/mt32/static/css/index.css
@@ -3,6 +3,12 @@
     color: white;
 }
 
+img {
+    width: 100%;
+    border-radius: 15px;
+    margin: 0.5em;
+}
+
 body {
     font-family: 'Inconsolata', monospace;
     background-color: #1E2227;
