--- a/themes/mt32/static/css/index.css
+++ b/themes/mt32/static/css/index.css
@@ -4,9 +4,10 @@
 }
 
 img {
-    width: 100%;
+    max-width: 100%;
     border-radius: 15px;
-    margin: 0.5em;
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
 }
 
 body {
