--- a/themes/mt32/static/css/index.css
+++ b/themes/mt32/static/css/index.css
@@ -35,11 +35,17 @@ body {
     color: white;
 }
 
+.textcontent {
+    padding-left: 4em;
+    padding-right: 6em;
+}
+
 .follow {
     position: -webkit-sticky; /* Safari */
     position: sticky;
     top: 2.5em;
     text-align: left;
+    margin-right: 25%;
 }
 
 .span {
