--- a/themes/mt32/layouts/_default/single.html
+++ b/themes/mt32/layouts/_default/single.html
@@ -17,7 +17,7 @@
                     {{ end }}
                 </div>
             </div>
-            <div class="postlink span-wide dark textcontent">
+            <div class="postlink span-wide dark">
                 {{- block "main" . }}
                     <div class="">{{ .Content }}</div>
                 {{- end }}
