--- a/themes/mt32/layouts/_default/single.html
+++ b/themes/mt32/layouts/_default/single.html
@@ -19,9 +19,31 @@
             </div>
             <div class="postlink span-wide dark">
                 {{- block "main" . }}
-                    <div class="">{{ .Content }}</div>
+                    <div class="content-inner">{{ .Content }}</div>
                 {{- end }}
             </div>
+            <aside class="side">
+                <div class="orange headdiv">
+                    <u><a class="heading">Further Reading</a></u>
+                </div>
+                {{ with .Site.GetPage "/posts" }}{{ range .Pages.ByDate.Reverse }}
+                    <div class="postlink txtWhite dark">
+                        <a class="hSmall txtWhite" href="{{.Permalink}}">{{.Title}}</a>
+                        <a class="small txtWhite"> | {{.Date.Format "2006-01-02"}} by {{ .Params.author }}</a>
+                        <p>
+                            {{ .Params.description }}
+                        </p>
+                        <hr>
+                        <div class="post-content">
+                            {{ .Content }}
+                        </div>
+                        <hr>
+                        {{ range .Params.tags }}
+                            <a class="tag orange">#{{ . }}</a>
+                        {{ end }}
+                    </div>
+                {{ end }} {{ end }}
+            </aside>
         </div>
         {{- partial "footer.html" . -}}
     </body>
