--- a/themes/mt32/layouts/partials/head.html
+++ b/themes/mt32/layouts/partials/head.html
@@ -10,4 +10,5 @@
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/single.css">
 </head>
