--- a/themes/mt32/layouts/partials/footer.html
+++ b/themes/mt32/layouts/partials/footer.html
@@ -11,5 +11,6 @@
     </div>
     <div class="flow-up">
         <div class="txtDark">{{ .Site.Params.disclamer }}</div>
+        <a class="txtDark" href="{{ .Site.Params.license }}">license</a>
     </div>
 </footer>
