--- a/themes/mt32/layouts/partials/footer.html
+++ b/themes/mt32/layouts/partials/footer.html
@@ -10,7 +10,7 @@
         <a class="txtDark">theme by <a class="txtDark" href="https://github.com/mtorials">m'torials</a></a>
     </div>
     <div class="flow-up">
-        <div class="txtDark">{{ .Site.Params.disclamer }}</div>
-        <a class="txtDark" href="{{ .Site.Params.license }}">license</a>
+        <a class="txtDark" href="{{ .Site.Params.license }}">license</a><br>
+        <a class="txtDark">{{ .Site.Params.disclamer }}</a>
     </div>
 </footer>
