--- a/public/posts/layout/index.html
+++ b/public/posts/layout/index.html
@@ -4,12 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <title>Layout | mt32.net</title>
     <meta name="description" content="No content here! ">
-    <link rel="canonical" href="https://mtorials-test.netlify.app/posts/layout/" />
+    <link rel="canonical" href="https://mt32.net/posts/layout/" />
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
     <meta property="og:title" content="Layout" />
 <meta property="og:description" content="No content here!" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://mtorials-test.netlify.app/posts/layout/" />
+<meta property="og:url" content="https://mt32.net/posts/layout/" />
 <meta property="article:published_time" content="2020-07-10T00:00:00+00:00" />
 <meta property="article:modified_time" content="2020-07-10T00:00:00+00:00" />
 
@@ -26,9 +26,9 @@
         <a class="heading txtWhite" href="/">mt32.net</a>
         <div class="flexbox-reverse">
             
-                <a class="link txtWhite" href="https://mtorials-test.netlify.app/posts/">Posts</a>
+                <a class="link txtWhite" href="https://mt32.net/posts/">Posts</a>
             
-                <a class="link txtWhite" href="https://mtorials-test.netlify.app/about/">About</a>
+                <a class="link txtWhite" href="https://mt32.net/about/">About</a>
              
         </div>
     </div>
@@ -72,7 +72,7 @@ lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ip
                 </div>
                 
                     <div class="postlink txtWhite dark gap">
-                        <a class="hSmall txtWhite" href="https://mtorials-test.netlify.app/posts/layout/">Layout</a>
+                        <a class="hSmall txtWhite" href="https://mt32.net/posts/layout/">Layout</a>
                         <a class="small txtWhite"> | 2020-07-10 by mtorials</a>
                         <p>
                             No content here!
@@ -102,7 +102,7 @@ lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ip
                     </div>
                 
                     <div class="postlink txtWhite dark gap">
-                        <a class="hSmall txtWhite" href="https://mtorials-test.netlify.app/posts/hugo/">Hugo</a>
+                        <a class="hSmall txtWhite" href="https://mt32.net/posts/hugo/">Hugo</a>
                         <a class="small txtWhite"> | 2020-07-10 by mtorials</a>
                         <p>
                             Hugo is the static site generator this website is made with.
@@ -135,7 +135,7 @@ lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ip
                     </div>
                 
                     <div class="postlink txtWhite dark gap">
-                        <a class="hSmall txtWhite" href="https://mtorials-test.netlify.app/posts/hello-world/">Hello World</a>
+                        <a class="hSmall txtWhite" href="https://mt32.net/posts/hello-world/">Hello World</a>
                         <a class="small txtWhite"> | 2020-07-10 by UniversumGames</a>
                         <p>
                             This is a &#39;Hello world!&#39; post
