--- a/themes/mt32/layouts/partials/head.html
+++ b/themes/mt32/layouts/partials/head.html
@@ -11,4 +11,9 @@
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/single.css">
+
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+
+    <link rel="manifest" href="/manifest.json">
 </head>
